--- a/index.html
+++ b/index.html
@@ -83,15 +83,19 @@
         <!-- Header -->
         <header class="bg-blue-900 text-white p-4 shadow-lg flex justify-between items-center sticky top-0 z-10">
             <img src="https://dcdn-us.mitiendanube.com/stores/004/546/736/themes/common/logo-660776128-1736645739-9bb5db1715d3b799cdf782b0f0815d541736645739-480-0.webp" alt="Logo Arelyshop Bolivia" class="h-12 w-auto">
-            <div class="text-right">
-                <p id="header-asesora" class="font-semibold text-lg"></p>
-            </div>
              <button id="logout-button" class="bg-red-500 hover:bg-red-600 text-white p-2 rounded-full transition duration-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-blue-900 focus:ring-red-500" aria-label="Cerrar Sesión">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                   <path stroke-linecap="round" stroke-linejoin="round" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
                 </svg>
             </button>
         </header>
+
+        <!-- Barra de Bienvenida -->
+        <div class="bg-white shadow-md">
+            <div class="container mx-auto px-4 py-2 sm:px-6 lg:px-8">
+                <p id="welcome-message" class="text-gray-700 text-center sm:text-left"></p>
+            </div>
+        </div>
 
         <!-- Contenido Principal (Formulario de Ventas) -->
         <main class="flex-grow container mx-auto px-4 py-8">
@@ -153,8 +157,8 @@
                             <input type="number" id="quantity" name="quantity" required min="1" class="w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200" placeholder="Ej: 1">
                         </div>
                         <div>
-                            <!-- CAMPO MODIFICADO: Etiqueta cambiada a "Precio por Unidad" -->
-                            <label for="amount" class="block text-sm font-medium text-gray-700 mb-1">Precio por Unidad ($)</label>
+                            <!-- CAMPO MODIFICADO: Etiqueta cambiada a "Precio por Unidad" y moneda a "Bs." -->
+                            <label for="amount" class="block text-sm font-medium text-gray-700 mb-1">Precio por Unidad (Bs.)</label>
                             <input type="number" id="amount" name="amount" step="0.01" required min="0" class="w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200" placeholder="Ej: 350.50">
                         </div>
                         <div>
@@ -180,7 +184,7 @@
                              <select id="saleModality" name="saleModality" required class="w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition duration-200">
                                 <option value="">Seleccione uno...</option>
                                 <option value="Tienda Física">Tienda Física</option>
-                                <option value="En Línea">En Línea</option>
+                                <option value="Encomienda">Encomienda</option>
                                 <option value="Delivery">Delivery</option>
                             </select>
                         </div>
@@ -231,7 +235,6 @@
             document.getElementById('saleNumber').value = currentUserSaleCount;
         }
 
-        // --- MODIFICADO --- Esta función ahora lee la hoja de ventas directamente
         async function fetchNextSaleNumber(user) {
             document.getElementById('saleNumber').value = "Cargando...";
             try {
@@ -342,7 +345,8 @@
 
         function updateHeader() {
             if (!loggedInUser) return;
-            document.getElementById('header-asesora').textContent = loggedInUser.fullName;
+            // La nueva barra de bienvenida
+            document.getElementById('welcome-message').innerHTML = `¡Bienvenid@, <span class="font-bold text-blue-800">${loggedInUser.fullName}</span>!`;
         }
 
         function showLoginMessage(msg, type) {
